--- a/deployment.yml
+++ b/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: KwetterFrontEnd
+  name: KwetterUserFrontend
   labels:
     app: nginx
 spec:
