--- a/service.yml
+++ b/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: KwetterFrontEndService
+  name: KwetterUserFrontendService
 spec:
   selector:
     app: KwetterUserFrontend
