--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -18,7 +18,7 @@ env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: cluster-1    # TODO: update to cluster name
   GKE_ZONE: us-central1-c   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: KwetterFrontEnd # TODO: update to deployment name
+  DEPLOYMENT_NAME: KwetterUserFrontend # TODO: update to deployment name
   IMAGE: static-site
 
 jobs:
