--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- gke-k8s/deployment.yaml
-- gke-k8s/service.yaml
+- deployment.yaml
+- service.yaml
