--- a/service.yaml
+++ b/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: KwetterUserFrontendService
+  name: kwetter-user-frontend
 spec:
   selector:
     app: KwetterUserFrontend
