--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: KwetterUserFrontend
+  name: kwetter-user-frontend
   labels:
     app: nginx
 spec:
