--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,13 +3,13 @@ kind: Ingress
 metadata:
   name: kwetter-user-frontend-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-spec:
+kubernetes.io/ingress.class: gce
+    kubernetes.io/ingress.global-static-ip-name: 35.201.94.81:
   rules:
   - http:
       paths:
       - path: /*
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: kwetter-user-frontend
