--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,11 +2,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: kwetter-user-frontend-ingress
+spec:
   rules:
   - http:
       paths:
       - path: /*
-        pathType: ImplementationSpecific
+        pathType: Prefix
         backend:
           service:
             name: kwetter-user-frontend
