--- a/service.yaml
+++ b/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kwetter-user-frontend
+  labels:
+    app: nginx
 spec:
   selector:
     app: kwetter-user-frontend
