--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,6 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: kwetter-user-frontend-ingress
+  annotations:
+kubernetes.io/ingress.class: gce
+    kubernetes.io/ingress.global-static-ip-name: kwetter-global-ip
 spec:
   rules:
   - http:
