--- a/ingress.yaml
+++ b/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kwetter-user-frontend-ingress
   annotations:
 kubernetes.io/ingress.class: gce
-    kubernetes.io/ingress.global-static-ip-name: kwetter-global-ip
+    kubernetes.io/ingress.global-static-ip-name: "kwetter-global-ip"
 spec:
   rules:
   - http:
